test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Thu, 24 Jul 2025 15:04:46 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="vDWJvTDQC1ogRqw2wCruuYUpvsVDOT8k", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}